# mymedia

./: README.md  config.py  db.py  go.mod  go.sum  main.go  metadata.py  models.py  picker.fish  picker.py  picker.sh  pyproject.toml
cmd/: picker.go  poster.go  root.go  scan.go
config/: config.go
internal/api/: api.go  media.go
internal/db/: db.go
internal/utils/: utils.go
myMediaUI/: go.mod  go.sum  picker.go
